--- a/source/static/styles/core/_mixins.scss
+++ b/source/static/styles/core/_mixins.scss
@@ -1,5 +1,6 @@
 @import 'mixins/clearfix';
 @import 'mixins/nolist';
+@import 'mixins/nobutton';
 @import 'mixins/imgresponsive';
 @import 'mixins/placeholder';
 @import 'mixins/absolute-center';
