--- a/source/modules/_extends/base-layout.pug
+++ b/source/modules/_extends/base-layout.pug
@@ -12,6 +12,8 @@ html(lang="en")
         title #{title}
 
         block styles
+            link(rel="stylesheet" href="css/extended.css")
+            link(rel="stylesheet" href="css/style.css")
 
         block js
     body
