--- a/source/modules/_extends/base-layout.pug
+++ b/source/modules/_extends/base-layout.pug
@@ -17,7 +17,8 @@ html(lang="en")
             link(rel="stylesheet" href="css/style.css")
 
         block js
-            link(src="js/common-webpack.bundle.js")
+            script(src="js/common-bundle.js")
+
     body
         main
             block sections
