--- a/source/components/meta/meta.pug
+++ b/source/components/meta/meta.pug
@@ -46,4 +46,4 @@ mixin meta(title, desc, css, js, fonts, favicon)
         script(src=val)
 
     // Common Script
-    script(src="js/common.js")
+    script(src="js/common-bundle.js")
