--- a/source/pages/index.pug
+++ b/source/pages/index.pug
@@ -10,11 +10,7 @@ block var
         ];
 
         var css = [
-            'libs/css-hamburgers/dist/hamburgers.min.css',
-            'libs/font-awesome/css/font-awesome.min.css',
-            'libs/slick-carousel/slick/slick.css',
-            'libs/slick-carousel/slick/slick-theme.css',
-            'libs/bootstrap/dist/css/bootstrap.min.css'
+            
         ];
 
         var js = [
@@ -30,5 +26,12 @@ block body
             h1 All done!
     block main
         main
+            ul.slick-slider.slick
+                li.slick-item 1
+                li.slick-item 2
+                li.slick-item 3
+                li.slick-item 4
+                li.slick-item 5
+                li.slick-item 6
     block footer
         footer
